update 修改一些配置